<resources>
    <string name="app_name">Apz</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="network_error_fmt">Network error: %s</string>
    <string name="network_error">Network error</string>
    <string name="failed_to_parse_error">Failed to parse error.</string>
    <string name="error_fmt">Error: %s</string>
    <string name="register_instead">Register instead</string>
    <string name="login_instead">Login instead</string>
    <string name="create_device">Create Device</string>
    <string name="logout">Logout</string>
    <string name="failed_to_load_devices">Failed to load devices</string>
    <string name="failed_to_create_device">Failed to create device</string>
    <string name="name">Name</string>
    <string name="create">Create</string>
    <string name="cancel">Cancel</string>
    <string name="electricity_price">Electricity price</string>
    <string name="save">Save</string>
    <string name="auto_enabled">Auto Enabled</string>
    <string name="api_key">API Key</string>
    <string name="invalid_electricity_price">Invalid electricity price</string>
    <string name="name_saved">Name saved</string>
    <string name="failed_to_save_name">Failed to save name</string>
    <string name="config_saved">Config saved</string>
    <string name="failed_to_save_config">Failed to save config</string>
    <string name="failed_to_update_state">Failed to update state</string>
    <string name="turn_off">Turn Off</string>
    <string name="turn_on">Turn On</string>
    <string name="failed_to_load_device">Failed to load device</string>
    <string name="failed_to_load_reports">Failed to load reports</string>
</resources>