<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/deviceName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name" />

    <EditText
        android:id="@+id/electricityPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/electricity_price"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/apiKey"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:hint="@string/api_key" />

    <Switch
        android:id="@+id/autoSwitch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/auto_enabled" />

    <Button
        android:id="@+id/manualToggleButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/reportsRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />
</LinearLayout>
